Support Java 9+ with compile and run scripts