@@ -1,2 +1,2 @@
-javac -d bin/ src/png2nam/*.java
+javac -d bin/ -cp lib/jfxrt.jar --module-path "lib\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml src/png2nam/*.java
 pause
