@@ -1,2 +1,2 @@
-java -cp bin/ png2nam.Main
+java -cp bin/ --module-path "lib\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml png2nam.Main
 pause
